This adds support to send the test message to anyone you would like. Yeah!

--- a/dada/DADA/Template/templates/send_email_screen.tmpl
+++ b/dada/DADA/Template/templates/send_email_screen.tmpl
@@ -136,7 +136,7 @@
 	  
 <!-- tmpl_include subscriber_field_tags_listing_widget.tmpl --> 
  
-<!-- tmpl_include name="send_a_list_message_button_widget.tmpl" -->
+<!-- tmpl_include send_a_list_message_button_widget.tmpl -->
  
 </form>
 
