--- a/dada/DADA/Template/templates/send_email_archive_options_widget.tmpl
+++ b/dada/DADA/Template/templates/send_email_archive_options_widget.tmpl
@@ -191,6 +191,12 @@
          <option value="2009">2009</option>
          <option value="2010">2010</option>
          <option value="2011">2011</option>
+         <option value="2012">2012</option>
+         <option value="2013">2013</option>
+         <option value="2014">2014</option>
+         <option value="2015">2015</option>
+
+
         </select> - 
         <select name="backdate_hour">
          <option value="12">12</option>
