Make sure that unsub links work!

--- a/dada/DADA/Template/templates/edit_type_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_type_screen.tmpl
@@ -75,8 +75,7 @@
 		
 		
 		<p>
-	<textarea name="mailing_list_message" id="mailing_list_message" rows="10" cols="50" ><!-- tmpl_var list_settings.mailing_list_message escape=HTML -->
-	</textarea> 
+	<textarea name="mailing_list_message" id="mailing_list_message" rows="10" cols="50" ><!-- tmpl_var list_settings.mailing_list_message escape=HTML --></textarea> 
 		</p>
 
 			</fieldset> 
@@ -102,8 +101,7 @@
 		
 		
 		<p>
-	<textarea name="mailing_list_message_html" id="mailing_list_message_html" rows="10" cols="50" ><!-- tmpl_var list_settings.mailing_list_message_html escape=HTML -->
-	</textarea> 
+	<textarea name="mailing_list_message_html" id="mailing_list_message_html" rows="10" cols="50" ><!-- tmpl_var list_settings.mailing_list_message_html escape=HTML --></textarea> 
 		</p>
 	</fieldset> 
 
@@ -169,8 +167,7 @@
 	
 	<p><label for="subscribed_message">PlainText Message:</label>
 	
-	<textarea name="subscribed_message" id="subscribed_message" rows="10" cols="50" ><!-- tmpl_var list_settings.subscribed_message escape=HTML -->
-</textarea> 
+	<textarea name="subscribed_message" id="subscribed_message" rows="10" cols="50" ><!-- tmpl_var list_settings.subscribed_message escape=HTML --></textarea> 
 	</p>
 </fieldset>
 <fieldset>
@@ -210,8 +207,7 @@
 	<p><label for="unsub_confirmation_message">PlainText Message:</label>
 	
 	
-<textarea name="unsub_confirmation_message" id="unsub_confirmation_message" rows="10" cols="50" ><!-- tmpl_var list_settings.unsub_confirmation_message escape=HTML -->
-</textarea> 
+<textarea name="unsub_confirmation_message" id="unsub_confirmation_message" rows="10" cols="50" ><!-- tmpl_var list_settings.unsub_confirmation_message escape=HTML --></textarea> 
 	</p>
 </fieldset>
 <fieldset>
@@ -238,8 +234,7 @@
 	<p><label for="unsubscribed_message">PlainText Message:</label>
 	
 	
-<textarea name="unsubscribed_message" id="unsubscribed_message" rows="10" cols="50" ><!-- tmpl_var list_settings.unsubscribed_message escape=HTML -->
-</textarea> 
+<textarea name="unsubscribed_message" id="unsubscribed_message" rows="10" cols="50" ><!-- tmpl_var list_settings.unsubscribed_message escape=HTML --></textarea> 
 	</p>
 </fieldset>
 
@@ -288,8 +283,7 @@
 	
 	
 	<p>
-<textarea name="invite_message_text" id="invite_message_text" rows="10" cols="50" ><!-- tmpl_var list_settings.invite_message_text escape=HTML -->
-</textarea> 
+<textarea name="invite_message_text" id="invite_message_text" rows="10" cols="50" ><!-- tmpl_var list_settings.invite_message_text escape=HTML --></textarea> 
 	</p>
 </fieldset> 
 
@@ -312,8 +306,7 @@
 		
 
 	<p>
-<textarea name="invite_message_html" id="invite_message_html" rows="10" cols="50" ><!-- tmpl_var list_settings.invite_message_html escape=HTML -->
-</textarea> 
+<textarea name="invite_message_html" id="invite_message_html" rows="10" cols="50" ><!-- tmpl_var list_settings.invite_message_html escape=HTML --></textarea> 
 	</p>
 </fieldset> 
 
@@ -372,8 +365,7 @@
 	
 	
 	<p>
-<textarea name="subscribed_by_list_owner_message" id="subscribed_by_list_owner_message" rows="10" cols="50" ><!-- tmpl_var list_settings.subscribed_by_list_owner_message escape=HTML -->
-</textarea> 
+<textarea name="subscribed_by_list_owner_message" id="subscribed_by_list_owner_message" rows="10" cols="50" ><!-- tmpl_var list_settings.subscribed_by_list_owner_message escape=HTML --></textarea> 
 	</p>
 </fieldset> 
 
@@ -417,8 +409,7 @@
 		</legend>
 	
 	<p>
-<textarea name="unsubscribed_by_list_owner_message" id="unsubscribed_by_list_owner_message" rows="10" cols="50" ><!-- tmpl_var list_settings.unsubscribed_by_list_owner_message escape=HTML -->
-</textarea> 
+<textarea name="unsubscribed_by_list_owner_message" id="unsubscribed_by_list_owner_message" rows="10" cols="50" ><!-- tmpl_var list_settings.unsubscribed_by_list_owner_message escape=HTML --></textarea> 
 	</p>
 </fieldset> 
 
@@ -466,8 +457,7 @@
     <p><label for="you_are_not_subscribed_message">PlainText Message:</label>
     
 	<p>
-<textarea name="you_are_not_subscribed_message" id="you_are_not_subscribed_message" rows="10" cols="50" ><!-- tmpl_var list_settings.you_are_not_subscribed_message escape=HTML -->
-</textarea> 
+<textarea name="you_are_not_subscribed_message" id="you_are_not_subscribed_message" rows="10" cols="50" ><!-- tmpl_var list_settings.you_are_not_subscribed_message escape=HTML --></textarea> 
 	</p>
 </fieldset>
 
@@ -499,8 +489,7 @@
 		</legend>
 		
 	<p>
-<textarea name="send_archive_message" id="send_archive_message" rows="10" cols="50" ><!-- tmpl_var list_settings.send_archive_message escape=HTML -->
-</textarea> 
+<textarea name="send_archive_message" id="send_archive_message" rows="10" cols="50" ><!-- tmpl_var list_settings.send_archive_message escape=HTML --></textarea> 
 	</p>
 </fieldset> 
 
@@ -510,8 +499,7 @@
 	</legend>
 	
 	<p>
-<textarea name="send_archive_message_html" id="send_archive_message_html" rows="10" cols="50" ><!-- tmpl_var list_settings.send_archive_message_html escape=HTML -->
-</textarea> 
+<textarea name="send_archive_message_html" id="send_archive_message_html" rows="10" cols="50" ><!-- tmpl_var list_settings.send_archive_message_html escape=HTML --></textarea> 
 	</p>
 </fieldset> 
 
@@ -545,8 +533,7 @@
     <p><label for="you_are_already_subscribed_message">PlainText Message:</label>
     
 	<p>
-<textarea name="you_are_already_subscribed_message" id="you_are_already_subscribed_message" rows="10" cols="50" ><!-- tmpl_var list_settings.you_are_already_subscribed_message escape=HTML -->
-</textarea> 
+<textarea name="you_are_already_subscribed_message" id="you_are_already_subscribed_message" rows="10" cols="50" ><!-- tmpl_var list_settings.you_are_already_subscribed_message escape=HTML --></textarea> 
 	</p>
 </fieldset>
 
