Added a new object: DADA::App::BounceHandler::Logs to deal with log searches.

--- a/dada/DADA/Template/templates/bounced_list_table_widget.tmpl
+++ b/dada/DADA/Template/templates/bounced_list_table_widget.tmpl
@@ -61,7 +61,7 @@
 	<td>
 	     <p>
 		
-	 	<a href="#something new" >
+	 	<a href="./plugins/dada_bounce_handler.pl?flavor=cgi_bounce_score_search&query=<!-- tmpl_var email ESCAPE=URL -->" >
 	       <!-- tmpl_var email -->  
 	      </a>
 	 	</p>
