--- a/dada/DADA/Template/templates/default_admin_template.tmpl
+++ b/dada/DADA/Template/templates/default_admin_template.tmpl
@@ -9,11 +9,12 @@
 
   <title><!-- tmpl_var title --> - <!-- tmpl_var list_settings.list_name --> - <!-- tmpl_var PROGRAM_NAME --></title>
  
-  <link rel="stylesheet" href="<!-- tmpl_var S_PROGRAM_URL -->/css/" type="text/css" media="screen" />
+  <link rel="stylesheet" href="<!-- tmpl_var S_PROGRAM_URL -->/css/default.css" type="text/css" media="screen" />
 
-  <script src="<!-- tmpl_var S_PROGRAM_URL -->/javascripts/dada_mail_admin_js.js" type="text/javascript"></script>
-  <script src="<!-- tmpl_var S_PROGRAM_URL -->/javascripts/prototype.js" type="text/javascript"></script>
-  <script src="<!-- tmpl_var S_PROGRAM_URL -->/javascripts/scriptaculous.js?load=effects" type="text/javascript"></script>
+  <script src="<!-- tmpl_var S_PROGRAM_URL -->/js/dada_mail_admin_js.js"         type="text/javascript"></script>
+  <script src="<!-- tmpl_var S_PROGRAM_URL -->/js/prototype.js"                  type="text/javascript"></script>
+  <script src="<!-- tmpl_var S_PROGRAM_URL -->/js/scriptaculous.js?load=effects" type="text/javascript"></script>
+  <script src="<!-- tmpl_var S_PROGRAM_URL -->/js/modalbox.js"                   type="text/javascript"></script>
 
 <!-- tmpl_if FCKEDITOR_URL --> 
 	<script src="<!-- tmpl_var FCKEDITOR_URL -->/fckeditor.js" type="text/javascript"></script>
