--- a/dada/installer-disabled/templates/installer_extra_javascript_widget.tmpl
+++ b/dada/installer-disabled/templates/installer_extra_javascript_widget.tmpl
@@ -1,8 +1,8 @@
 <!-- begin installer_extra_javascript_widget.tmpl --> 
 
-<script src="<!-- tmpl_var my_S_PROGRAM_URL -->/javascripts/dada_mail_admin_js.js" type="text/javascript"></script>
-<script src="<!-- tmpl_var my_S_PROGRAM_URL -->/javascripts/prototype.js" type="text/javascript"></script>
-<script src="<!-- tmpl_var my_S_PROGRAM_URL -->/javascripts/scriptaculous.js?load=effects" type="text/javascript"></script>
+<script src="<!-- tmpl_var my_S_PROGRAM_URL -->/js/dada_mail_admin_js.js" type="text/javascript"></script>
+<script src="<!-- tmpl_var my_S_PROGRAM_URL -->/js/prototype.js" type="text/javascript"></script>
+<script src="<!-- tmpl_var my_S_PROGRAM_URL -->/js/scriptaculous.js?load=effects" type="text/javascript"></script>
 <script type="text/javascript"> 
 		
 	 //<![CDATA[
